# subgraph-radio

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  contributing.md  docker-compose.yml  e2e-tests.Dockerfile  e2e-tests.docker-compose.yml  grafana.json  install-golang.sh  poi-radio-grafana.json  pull_request_template.md  rollback.patch  run-e2e-tests.sh  run-tests.sh  template.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: docker.yml  gen-binaries.yml  labels.yml  main.yml
.sqlx/: query-13343d58e51f485d90eafb81785eca553874ab154c019fffb93d8d57f061c008.json  query-1598168faa0e38d2bd87a7aba3a6d48ae19ada62770aaf97992173bc15f0beef.json  query-18a11e943c546471050559a9707562623f2f9cf9451f2b670ff12d393e811e79.json  query-1da94d33f4debe43ccbacb3e3542736861030b7ef4e35d94f7d8a5051f5ba437.json  query-256874918132db5582b4f08f098c9bd2e5062d9d8fe65112b7a884d35e5d7267.json  query-2884faf600bb544f526b0113879aad67a23a999d14b5b4aa0348b3a997c83f41.json  query-5db100e45ba48233b2bccd892181502ea6fe1ba26800bee47af5b2e2da6ce42a.json  query-6c68d7114da2a64a39a014ab55ea708db37c16d8a441dc2dd833c48dd2101836.json  query-6c712ee2fe2bcf46090649b1d950e63673a6d1416bd8907ac5b44b25f46bcebe.json  query-705e5eebd526c23c18332495c0124da724ed97818dbd0ce505c68f0d82982ac3.json  query-7064b1729f6104fc66c6925fd6faeee8b0030321e3801ef0ed92953b6c3fbf43.json  query-7c61a1473e6f0ef143f49fb20b8cb8d6776113ac4c663502e01d2f81755e7457.json  query-7e8a55b84c78053925be21e17e159c3d38fd1db23d437657334120749f9e9ea2.json  query-9307257bf723ea3b87e55d86c0974af216eb2e355347672754d3be5f46ab6814.json  query-95e7ccba36044a05f27836cdb6872a0fdd0736074bab5a9be237a6e73fb03a2c.json  query-a91f93372ec2fa5f368aa2e3dc85210361d85fd18745f1af79c926c5a89f4490.json  query-b6bb53e5fd3e36b7c5b627d743d010217827fe230a2674c168acb954978959d1.json  query-bcb07a375833cad93797fbfe7d537a66ad37cd5aaf8b280e273ea4ee0f8532f3.json  query-befde8748e7ffb210f38cf47d0dd8c5975fcb34fa7f351341907b25dc8167b85.json  query-c768d9f6c074652c3bbf7c150f79b2e9199ba2c981bf19caf4b367658043ce40.json  query-c94465c1baba580f15e797904482289142ab78229c91257e3644de8fbabd5457.json  query-ce7ba8a4a6062c72591c8c4594cddb4c18e10e18a871fb75488281d479d9220b.json  query-e8313865a187eca64442e3137cc5b382566f845f77a21a936008fbbfa939584a.json  query-f9468a1c5ce939b902185b1617a6266851a49709d1ec02bd7d14a0e36e58b056.json  query-f95bb12bb4bb12ac80760150a2ffe049ba50431a90748d20d55fff5cd8ffa43c.json  query-fb4a1ca07c9cda5c7ddaaf9be55a07b24c9a1eb36e0989203c2d83b6db9cd191.json
benches/: attestations.rs  gossips.rs
frontend/: Cargo.toml  README.md  index.html  index.scss  schema.json
frontend/src/: main.rs  router.rs
frontend/src/components/: table.rs
frontend/src/pages/: home.rs
frontend/src/query/: comparison.graphql  queries.rs
frontend/src/stores/: store.rs
integration-tests/: Cargo.toml
integration-tests/src/: main.rs  utils.rs
integration-tests/src/checks/: invalid_messages.rs  invalid_sender.rs  mod.rs  poi_divergence_local.rs  poi_divergence_remote.rs  simple_tests.rs
integration-tests/src/setup/: basic.rs  constants.rs  divergent.rs  invalid_block_hash.rs  invalid_nonce.rs  invalid_payload.rs  mod.rs  test_radio.rs
migrations/: 20231208160822_persisted-state.down.sql  20231208160822_persisted-state.up.sql
one-shot/: Cargo.toml
one-shot/src/: config.rs  lib.rs  main.rs
one-shot/src/operator/: mod.rs  operation.rs
poi-radio/: Cargo.toml
poi-radio/benches/: attestations.rs  gossips.rs
poi-radio/src/: config.rs  lib.rs  main.rs  state.rs
poi-radio/src/graphql/: mod.rs  query_block_hash_from_number.graphql
poi-radio/src/messages/: mod.rs  poi.rs  upgrade.rs
poi-radio/src/metrics/: mod.rs
poi-radio/src/operator/: attestation.rs  mod.rs  notifier.rs  operation.rs
poi-radio/src/server/: mod.rs
poi-radio/src/server/model/: mod.rs
scripts/: release.sh
src/: attestation.rs  config.rs  lib.rs  main.rs  notifier.rs  operation.rs  state.rs
src/attestation/: mod.rs
src/graphql/: mod.rs  query_indexing_statuses.graphql  schema_graph_node.graphql
src/metrics/: mod.rs
src/operator/: attestation.rs  callbook.rs  mod.rs  operation.rs
src/server/: mod.rs
src/server/model/: mod.rs
src/server/routes/: mod.rs
subgraph-radio/: Cargo.toml  build.rs
subgraph-radio/benches/: attestations.rs  gossips.rs
subgraph-radio/migrations/: 20231204080834_persisted-state.down.sql  20231204080834_persisted-state.up.sql
subgraph-radio/src/: config.rs  lib.rs  main.rs  qos-dashboard.html  state.rs
subgraph-radio/src/database/: mod.rs  test.rs
subgraph-radio/src/entities/: mod.rs  test.rs
subgraph-radio/src/messages/: poi.rs  upgrade.rs
subgraph-radio/src/metrics/: mod.rs
subgraph-radio/src/operator/: attestation.rs  indexer_management.rs  mod.rs  notifier.rs  operation.rs  summary.rs
subgraph-radio/src/server/: mod.rs
subgraph-radio/src/server/model/: mod.rs
subgraph-radio/src/server/routes/: mod.rs
test-runner/: Cargo.toml
test-runner/src/: id_validation.rs  invalid_block_hash.rs  invalid_nonce.rs  invalid_payload.rs  invalid_sender.rs  lib.rs  main.rs  message_handling.rs  poi_divergent.rs  poi_match.rs  sender_validation.rs  topics.rs
test-sender/: Cargo.toml
test-sender/src/: main.rs
test-utils/: Cargo.toml
test-utils/src/: config.rs  dummy_msg.rs  lib.rs  mock_server.rs
