[package]
name = "poi-radio"
version = "0.0.13"
edition = "2021"
authors = ["GraphOps (axiomatic-aardvark, hopeyen)"]
description = "POI Radio monitors subgraph data integrity in real time using Graphcast SDK"
license = "Apache-2.0"
repository = "https://github.com/graphops/poi-radio"
keywords = ["graphprotocol", "data-integrity", "Indexer", "waku", "p2p"]
categories = ["network-programming", "web-programming::http-client"]
default-run = "poi-radio"

[dependencies]
graphcast-sdk = { package = "graphcast-sdk", git = "https://github.com/graphops/graphcast-sdk" }
prost = "0.11"
once_cell = "1.15"
chrono = "0.4"
serde = "1.0.147"
serde_json = "1.0.87"
sha3 = "0.10.6"
tokio = { version = "1.1.1", features = ["full", "rt"] }
anyhow = "1.0.69"
graphql_client = "0.9.0"
serde_derive = "1.0.114"
reqwest = { version = "0.11.0", features = ["json"] }
thiserror = "1.0.40"
regex = "1.7.1"
ethers = "2.0.0"
ethers-contract = "2.0.0"
ethers-core = "2.0.0"
ethers-derive-eip712 = "1.0.2"
partial_application = "0.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
wiremock = "0.5.16"
dotenv = "0.15"
rand = "0.8.5"
secp256k1 = "0.25.0"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = "0.3"
autometrics = {version = "0.3.2", features = ["prometheus-exporter", ]}
axum = "0.5"
prometheus = "0.13.3"
# async-graphql = { version = "5.0", features = ["chrono", "dataloader"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
# async-graphql-axum = "5.0.7"
# axum-macros = "0.3.7"
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
opentelemetry = {version = "0.18.0", features = ["rt-tokio"]}
opentelemetry-jaeger = {version = "0.17.0", features = ["rt-tokio"]}
tracing-opentelemetry = "0.18.0"
clap = { version = "4.1.6", features = ["derive"] }

[[bin]]
name = "integration-tests"
path = "integration-tests/src/main.rs"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
# Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
