[workspace]

members = ["subgraph-radio", "test-sender", "test-utils", "test-runner"]
resolver = "2"

[profile.dev]
debug = true
debuginfo = 2

[profile.release]
panic = 'unwind'
opt-level = 3

[workspace.dependencies]
graphcast-sdk = { git = "https://github.com/graphops/graphcast-sdk", branch="update-waku-bindings-version" }
clap = { version = "4.4", features = [
    "cargo",
    "unstable-doc",
    "derive",
    "env",
] }
