[workspace]

members = ["subgraph-radio", "test-sender", "test-utils", "test-runner"]
resolver = "2"

[profile.dev]
debug = true
debuginfo = 2

[profile.release]
panic = 'unwind'
opt-level = 3

[workspace.dependencies]
graphcast-sdk = "0.7.0"
clap = { version = "4.4", features = [
    "cargo",
    "unstable-doc",
    "derive",
    "env",
] }
