[package]
name = "one-shot"
version = "0.3.6"
edition = "2021"
authors = ["GraphOps (axiomatic-aardvark, hopeyen)"]
description = "One-shot messaging using Graphcast SDK (can be separated to a different repo)"
license = "Apache-2.0"
repository = "https://github.com/graphops/poi-radio"
keywords = ["graphprotocol", "data-integrity", "Indexer", "waku", "p2p"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
graphcast-sdk = { package = "graphcast-sdk", git = "https://github.com/graphops/graphcast-sdk", rev = "99d942e" } 
poi-radio = { path = "../poi-radio" }
prost = "0.11"
once_cell = "1.17"
chrono = "0.4"
serde = { version = "1.0.163", features = ["rc"] }
serde_json = "1.0.96"
sha3 = "0.10.8"
derive-getters = "0.2.1"
tokio = { version = "1.28.1", features = ["full", "rt"] }
anyhow = "1.0"
graphql_client = "0.9.0"
serde_derive = "1.0"
reqwest = { version = "0.11.17", features = ["json"] }
thiserror = "1.0.40"
regex = "1.8.1"
ethers = "2.0.4"
ethers-contract = "2.0.4"
ethers-core = "2.0.4"
ethers-derive-eip712 = "1.0.2"
partial_application = "0.2.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
wiremock = "0.5.18"
dotenv = "0.15"
rand = "0.8.5"
secp256k1 = "0.25.0"
hex = "0.4.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
autometrics = { version = "0.3.3", features = ["prometheus-exporter"] }
axum = "0.5"
prometheus = "0.13.3"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.18.0"
clap = { version = "3.2.25", features = ["derive", "env"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
# Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
