[package]
name = "one-shot"
version = "0.1.0"
edition = "2021"
authors = ["GraphOps (axiomatic-aardvark, hopeyen)"]
description = "One-shot messaging using Graphcast SDK (can be separated to a different repo)"
license = "Apache-2.0"
repository = "https://github.com/graphops/subgraph-radio"
keywords = ["graphprotocol", "data-integrity", "Indexer", "waku", "p2p"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
graphcast-sdk = "0.4.0"
subgraph-radio = { path = "../subgraph-radio" }
once_cell = "1.17"
chrono = "0.4"
serde = { version = "1.0.163", features = ["rc"] }
serde_json = "1.0.96"
derive-getters = "0.2.1"
tokio = { version = "1.28.1", features = ["full", "rt"] }
anyhow = "1.0"
thiserror = "1.0.40"
ethers = "2.0.4"
partial_application = "0.2.1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
clap = { version = "3.2.25", features = ["derive", "env"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
# Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
