[package]
name = "subgraph-radio"
version = "0.1.1"
edition = "2021"
authors = ["GraphOps (axiomatic-aardvark, hopeyen)"]
description = "Subgraph Radio monitors subgraph Public PoI and version upgrades messages in real time using Graphcast SDK"
license = "Apache-2.0"
repository = "https://github.com/graphops/subgraph-radio"
keywords = ["graphprotocol", "data-integrity", "Indexer", "waku", "p2p"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
graphcast-sdk = "0.4.0"
prost = "0.11"
once_cell = "1.17"
chrono = "0.4"
serde = { version = "1.0.163", features = ["rc"] }
serde_json = "1.0.96"
sha3 = "0.10.8"
derive-getters = "0.2.1"
tokio = { version = "1.28.1", features = ["full", "rt"] }
anyhow = "1.0"
graphql_client = "0.12.0"
serde_derive = "1.0"
reqwest = { version = "0.11.17", features = ["json"] }
thiserror = "1.0.40"
ethers = "2.0.4"
ethers-contract = "2.0.4"
ethers-core = "2.0.4"
ethers-derive-eip712 = "1.0.2"
partial_application = "0.2.1"
num-traits = "0.2.15"
dotenv = "0.15"
rand = "0.8.5"
secp256k1 = "0.27.0"
hex = "0.4.3"
itertools = "0.11.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "ansi",
    "fmt",
    "std",
    "json",
] }
autometrics = { version = "0.3.3", features = ["prometheus-exporter"] }
axum = "0.5"
prometheus = "0.13.3"
async-graphql = "4.0.16"
async-graphql-axum = "4.0.16"
async-trait = "0.1.71"
metrics = "0.21.0"
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.18.0"
clap = { version = "3.2.25", features = ["derive", "env"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["async", "async_futures"] }
rand = "0.8"

[[bench]]
name = "attestations"
harness = false

[[bench]]
name = "gossips"
harness = false

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
# Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
