[package]
name = "test-sender"
version = "0.0.1"
edition = "2021"
authors = ["GraphOps (axiomatic-aardvark, hopeyen)"]
description = "POI Radio e2e tests"
license = "Apache-2.0"
repository = "https://github.com/graphops/poi-radio"
keywords = [
    "graphprotocol",
    "data-integrity",
    "Indexer",
    "waku",
    "p2p",
    "tests",
]
categories = [
    "network-programming",
    "web-programming::http-client",
    "e2e-tests",
]

[dependencies]
waku = { version = "0.1.1", package = "waku-bindings" }
graphcast-sdk = { package = "graphcast-sdk", git = "https://github.com/graphops/graphcast-sdk", rev = "99d942e" } 
test-utils = { path = "../test-utils" }
poi-radio = { path = "../poi-radio" }
tokio = { version = "1.1.1", features = ["full", "rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
axum = "0.5"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tower = "0.4.13"
serde = { version = "1.0.163", features = ["rc"] }
serde_json = "1.0.96"
serde_derive = "1.0"
clap = { version = "3.2.25", features = ["derive"] }
prost = "0.11.9"
ethers = "2.0.7"
